# RP2350-Handheld-Game-Console

./: .gitignore  CMakeLists.txt  Part14.STL  README.md  Top.STL  audio.c  audio.h  display.c  display.h  eeprom.c  eeprom.h  flappy_game.h  flappy_render.c  game.c  game.h  input.c  input.h  main.c  pins.h  platformio.ini  tetris_game.c  tetris_game.h  tetris_render.c  tetris_render.h
Project_PCB/: Project_PCB.kicad_pcb  Project_PCB.kicad_prl  Project_PCB.kicad_pro  Project_PCB.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  ~Project_PCB.kicad_sch.lck
Project_PCB/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
src/: CMakeLists.txt  audio.c  audio.h  display.c  display.h  eeprom.h  flappy_game.c  flappy_game.h  flappy_render.c  flappy_render.h  game2048.c  game2048.h  input.c  input.h  invaders.c  invaders.h  main.c  pins.h  tetris_game.c  tetris_game.h  tetris_render.c
tetris/: CMakeLists.txt  audio.c  audio.h  display.c  display.h  eeprom.c  eeprom.h  game.c  game.h  input.c  input.h  main.c  pico_sdk_import.cmake  pins.h
